--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.main.banner-mode=off
+logging.level.org.springframework=ERROR
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/sprint_1
 spring.datasource.username=postgres
 spring.datasource.password=
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update 	
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
