--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/sprint_1
 spring.datasource.username=postgres
-spring.datasource.password=Prashant@1
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
