--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sprint1demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/sprint1
 spring.datasource.username=postgres
 spring.datasource.password=kundavai
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
