--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
+#<<<<<<< HEAD
+#<<<<<<< HEAD
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.hibernate.show-sql=true
@@ -12,27 +12,27 @@ spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
-=======
-<<<<<<< HEAD
-=======
->>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/classdemo
-spring.datasource.username=postgres
-spring.datasource.password=Tuba.786
-
-spring.datasource.initialization-mode=always
-spring.datasource.initialize=true
-spring.datasource.schema=classpath:/schema.sql
-spring.datasource.continue-on-error=true
-<<<<<<< HEAD
-=======
-spring.datasource.password=
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
->>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
->>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
-=======
->>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
+#=======
+#<<<<<<< HEAD
+#=======
+#>>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.show-sql=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/classdemo
+#spring.datasource.username=postgres
+#spring.datasource.password=Tuba.786
+#
+#spring.datasource.initialization-mode=always
+#spring.datasource.initialize=true
+#spring.datasource.schema=classpath:/schema.sql
+#spring.datasource.continue-on-error=true
+#<<<<<<< HEAD
+#=======
+#spring.datasource.password=
+#
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#>>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
+#>>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
+#=======
+#>>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
