--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,7 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.hibernate.show-sql=true
-
-spring.datasource.url= jdbc:postgresql://localhost:5432/CapgDBdemo
-spring.datasource.username= postgres
-spring.datasource.password= 5261
-
-spring.datasource.initialization-mode=always
-spring.datasource.initialize=true
-spring.datasource.schema=classpath:/schema.sql
-spring.datasource.continue-on-error=true
-=======
-<<<<<<< HEAD
-=======
->>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/classdemo
+spring.datasource.url=jdbc:postgresql://localhost:5432/sprint1demo
 spring.datasource.username=postgres
 spring.datasource.password=Tuba.786
 
@@ -27,12 +9,4 @@ spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
-<<<<<<< HEAD
-=======
-spring.datasource.password=
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
->>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
->>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
-=======
->>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
