--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,14 +12,14 @@ spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-=======
-spring.datasource.url=jdbc:postgresql://localhost:5432/sprint1
-spring.datasource.username=postgres
-spring.datasource.password=kundavai
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update 	
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
->>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
+#=======
+#spring.datasource.url=jdbc:postgresql://localhost:5432/sprint1
+#spring.datasource.username=postgres
+#spring.datasource.password=kundavai
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update 	
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#>>>>>>> branch 'main' of https://github.com/CapgSelection/UniversityCourseSelectionG1
