--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/springDemo
+spring.datasource.url=jdbc:postgresql://localhost:5432/sprint1demo
 spring.datasource.username=postgres
-spring.datasource.password=Mom4dad@31
+spring.datasource.password=Tuba.786
+
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
+spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
