--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sprint1
+spring.datasource.url=jdbc:postgresql://localhost:5432/sprint1login
 spring.datasource.username=postgres
 spring.datasource.password=kundavai
 spring.datasource.driver-class-name=org.postgresql.Driver
