--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/springDemo
+spring.datasource.url=jdbc:postgresql://localhost:5432/UniversityCourseSelection
 spring.datasource.username=postgres
-spring.datasource.password=Mom4dad@31
+spring.datasource.password=Prashant@1
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.continue-on-error=true
