--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sprint1login
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/springDemo
 spring.datasource.username=postgres
-spring.datasource.password=kundavai
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update 	
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
+spring.datasource.password=Mom4dad@31
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.continue-on-error=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
