--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
-
-
-
-
-
-
-
-
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/UniversityCourseSelection
+spring.datasource.url=jdbc:postgresql://localhost:5432/sprint1demo
 spring.datasource.username=postgres
-spring.datasource.password=Prashant@1
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update 	
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
-
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-#server.port=8090
+server.port=8090
+
+
+
+
+
+
+
+
+
